[package]
name = "firefly"
version = "0.0.1-beta"
edition = "2024"
license = "MIT"
authors = ["Ibraheem Ahmed <ibraheem@ibraheem.ca>"]
description = "High performance concurrent channels"
repository = "https://github.com/ibraheemdev/firefly"
keywords = ["channel", "fifo", "queue", "mpmc", "mpsc", "async", "thread", "lock-free"]
categories = ["concurrency", "asynchronous", "data-structures"]
rust-version = "1.85.0"

[workspace]
members = ["firefly-utils"]

[dependencies]

[dev-dependencies]
